2007-02-17  Akim Demaille  <akim.demaille@free.fr>

	Factor UObjectHub
	* src/liburbi/uobject/uobject-hub-common.cc: New.
	* src/liburbi/uobject.cc: Extacted from here.
	* src/liburbi/uobject/uobject.mk: Adjust.

2007-02-17  Akim Demaille  <akim.demaille@free.fr>

	uobject-common.cc
	* src/liburbi/uobject/uobject-common.cc (varmap, functionmap)
	(monitormap, accessmap, eventmap, eventendmap, timermap)
	(updatemap, cast, cleanTable): New.
	* src/liburbi/uobject.cc: Extracted from here.
	* src/liburbi/uobject/uobject.mk: Adjust.

2007-02-15  Akim Demaille  <akim@lrde.epita.fr>

	Indentation fixes
	* src/liburbi/uobject/urbi/uobject.hh.template: here.

2007-02-15  Akim Demaille  <akim@lrde.epita.fr>

	Avoid useless std::string
	* src/liburbi/uobject/urbi/uobject.hh.template: rely on literal
	string concatenation by the compiler.
	Rely on conversion from const char* to std::string too.

2007-02-15  Akim Demaille  <akim.demaille@free.fr>

	ustarter.hh
	* src/liburbi/uobject/urbi/ustarter.hh: New.
	* src/liburbi/uobject/urbi/uobject.hh.template: Extracted from here.
	* src/liburbi/uobject/uobject.mk: Adjust.

2007-02-06  Akim Demaille  <demaille@gostai.com>

	Fix includes
	* src/liburbi/uclient.cc: We need these for gettimeofday.

2007-02-06  Akim Demaille  <demaille@gostai.com>

	Use libport
	* src/liburbi/uclient.cc: To address portability issues.
	(libport/network.h): Use it.
	Use perror freely.

2007-02-06  Akim Demaille  <demaille@gostai.com>

	2007-02-06  Akim Demaille  <demaille@gostai.com>

	Don't std::string(0)
	* src/liburbi/uobject/urbi/uvalue.hh (UNamedValue::UNamedValue): here.

	2007-02-02  Matthieu Nottale  <nottale@gostai.com>

	Robustify against malformed binary.
	* src/liburbi/uabstractclient.cc: Try to survive when server lies
	about the binary size.

	2007-02-02  Akim Demaille  <demaille@gostai.com>

	Don't pass -Werror.
	* configure.ac: Let URBI_PROG_CXX do it.

	2007-01-31  POTHIER Benoit  <benoit.pothier@gmx.net>

	Dummy change to test hooks.